--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -31,6 +31,7 @@ body {
 .btn:hover {
   box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.5);
   transition-delay: 0s;
+  background: #e04e41;
   color:white;
 }
 
