--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -10,9 +10,9 @@ body {
 .winner {
   /*background: #06479a;*/
   /*background:rgba(6, 71, 154,1);*/
-  background: rgb(5,76,170);
+  /*background: rgb(5,76,170);*/
 
-  color:white;
+  /*color:white;*/
   font-size:20px;
 }
 
