--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -11,8 +11,8 @@ body {
   /*background: #06479a;*/
   /*background:rgba(6, 71, 154,1);*/
   /*background: rgb(5,76,170);*/
-
-  /*color:white;*/
+  background: #4E937A;
+  color:white;
   font-size:20px;
 }
 
