--- a/react-ui/src/index.css
+++ b/react-ui/src/index.css
@@ -22,6 +22,26 @@ body {
   font-size:20px;
 }
 
+.list-panel .panel-body {
+  padding:0px;
+}
+
+.list-group-item {
+  border-radius: 0px;
+  border-top:0px;
+  border-right:0px;
+  border-left:0px;
+  border-bottom:0px;
+}
+
+.list-group {
+  margin:0px;
+}
+
+.list-group-item:first-child{
+  border-radius:0px;
+}
+
 .btn {
   border-radius: 2px;
   border: none;
